--- a/RetrofitUser/app/src/main/AndroidManifest.xml
+++ b/RetrofitUser/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".display" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".display" />
         <activity android:name=".Update"></activity>
     </application>
 
